--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
+  letter-spacing: 0.03em;
   background-color: var(--portfolio-button-background);
   color: var(--primary-title-color);
 }
@@ -234,4 +235,11 @@ body {
 .portfolio-text {
   font-size: 16px;
   line-height: 1.88;
+  color: var(--primary-color-text);
+}
+.portfolio-title:hover,
+.portfolio-title:focus,
+.portfolio-text:hover,
+.portfolio-text:focus {
+  color: var(--accent-color);
 }
